docs/api/qiskit/0.24/qiskit.qobj.QasmExperimentCalibrations.mdx
---
title: QasmExperimentCalibrations (v0.24)
description: API reference for qiskit.qobj.QasmExperimentCalibrations in qiskit v0.24
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.qobj.QasmExperimentCalibrations
---

<span id="qiskit-qobj-qasmexperimentcalibrations" />

# qiskit.qobj.QasmExperimentCalibrations

<Class id="qiskit.qobj.QasmExperimentCalibrations" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.16/qiskit/qobj/qasm_qobj.py" signature="QasmExperimentCalibrations(gates)" modifiers="class">
  A container for any calibrations data. The gates attribute contains a list of GateCalibrations.

  Initialize a container for calibrations.

  **Parameters**

  **gates** (*list(*[*GateCalibration*](qiskit.qobj.GateCalibration "qiskit.qobj.GateCalibration")*)*) –

  ### \_\_init\_\_

  <Function id="qiskit.qobj.QasmExperimentCalibrations.__init__" signature="__init__(gates)">
    Initialize a container for calibrations.

    **Parameters**

    **gates** (*list(*[*GateCalibration*](qiskit.qobj.GateCalibration "qiskit.qobj.GateCalibration")*)*) –
  </Function>

  ## Methods

  |                                                                                                                           |                                                                |
  | ------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------- |
  | [`__init__`](#qiskit.qobj.QasmExperimentCalibrations.__init__ "qiskit.qobj.QasmExperimentCalibrations.__init__")(gates)   | Initialize a container for calibrations.                       |
  | [`from_dict`](#qiskit.qobj.QasmExperimentCalibrations.from_dict "qiskit.qobj.QasmExperimentCalibrations.from_dict")(data) | Create a new GateCalibration object from a dictionary.         |
  | [`to_dict`](#qiskit.qobj.QasmExperimentCalibrations.to_dict "qiskit.qobj.QasmExperimentCalibrations.to_dict")()           | Return a dictionary format representation of the calibrations. |

  ### from\_dict

  <Function id="qiskit.qobj.QasmExperimentCalibrations.from_dict" signature="from_dict(data)" modifiers="classmethod">
    Create a new GateCalibration object from a dictionary.

    **Parameters**

    **data** (*dict*) – A dictionary representing the QasmExperimentCalibrations to create. It will be in the same format as output by [`to_dict()`](#qiskit.qobj.QasmExperimentCalibrations.to_dict "qiskit.qobj.QasmExperimentCalibrations.to_dict").

    **Returns**

    The QasmExperimentCalibrations from the input dictionary.

    **Return type**

    [QasmExperimentCalibrations](#qiskit.qobj.QasmExperimentCalibrations "qiskit.qobj.QasmExperimentCalibrations")
  </Function>

  ### to\_dict

  <Function id="qiskit.qobj.QasmExperimentCalibrations.to_dict" signature="to_dict()">
    Return a dictionary format representation of the calibrations.

    **Returns**

    The dictionary form of the GateCalibration.

    **Return type**

    dict
  </Function>
</Class>

