docs/api/qiskit/1.2/qiskit.qobj.QasmExperimentCalibrations.mdx
---
title: QasmExperimentCalibrations (v1.2)
description: API reference for qiskit.qobj.QasmExperimentCalibrations in qiskit v1.2
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.qobj.QasmExperimentCalibrations
---

# QasmExperimentCalibrations

<Class id="qiskit.qobj.QasmExperimentCalibrations" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/qobj/qasm_qobj.py#L477-L523" signature="qiskit.qobj.QasmExperimentCalibrations(gates)" modifiers="class">
  Bases: [`object`](https://docs.python.org/3/library/functions.html#object "(in Python v3.13)")

  A container for any calibrations data. The gates attribute contains a list of GateCalibrations.

  Initialize a container for calibrations.

  <Admonition title="Deprecated since version 1.2" type="danger">
    The class `qiskit.qobj.qasm_qobj.QasmExperimentCalibrations` is deprecated as of qiskit 1.2. It will be removed in the 2.0 release. The Qobj class and related functionality are part of the deprecated BackendV1 workflow, and no longer necessary for BackendV2. If a user workflow requires Qobj it likely relies on deprecated functionality and should be updated to use BackendV2.
  </Admonition>

  **Parameters**

  **gates** ([*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.13)")*(*[*GateCalibration*](qiskit.qobj.GateCalibration "qiskit.qobj.GateCalibration")*)*) –

  ## Methods

  ### from\_dict

  <Function id="qiskit.qobj.QasmExperimentCalibrations.from_dict" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/qobj/qasm_qobj.py#L510-L523" signature="from_dict(data)" modifiers="classmethod">
    Create a new GateCalibration object from a dictionary.

    **Parameters**

    **data** ([*dict*](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.13)")) – A dictionary representing the QasmExperimentCalibrations to create. It will be in the same format as output by [`to_dict()`](#qiskit.qobj.QasmExperimentCalibrations.to_dict "qiskit.qobj.QasmExperimentCalibrations.to_dict").

    **Returns**

    The QasmExperimentCalibrations from the input dictionary.

    **Return type**

    [QasmExperimentCalibrations](#qiskit.qobj.QasmExperimentCalibrations "qiskit.qobj.QasmExperimentCalibrations")
  </Function>

  ### to\_dict

  <Function id="qiskit.qobj.QasmExperimentCalibrations.to_dict" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/qobj/qasm_qobj.py#L499-L508" signature="to_dict()">
    Return a dictionary format representation of the calibrations.

    **Returns**

    The dictionary form of the GateCalibration.

    **Return type**

    [dict](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.13)")
  </Function>
</Class>

